--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,6 +68,12 @@
 					</ul>
 				</li>
 
+				<li><a href="/">Think</a>
+					<ul>
+							<li><a href="/Think/Note">Note</a></li>
+					</ul>
+				</li>
+
 
 			</ul>
 		</div>
