--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div class="home">
-  <div class="selfie">
-  	<a href="https://devYurim.github.io/about">
-  		<img src="https://devYurim.github.io/assets/img/profile.PNG">
+  <div class="profile">
+  	<a href="https://bill7845.github.io/about">
+  		<img src="https://bill7845.github.io/assets/img/Kiprofile.PNG">
   	</a>
   </div>
 
