--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
   <div class="profile">
   	<a href="https://bill7845.github.io/about">
-  		<img src="https://bill7845.github.io/assets/img/profile.PNG">
+  		<img src="https://bill7845.github.io/assets/img/profile.PNG"" width="300px;">
   	</a>
   </div>
 
