--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,16 +1,13 @@
 ---
 layout: default
 ---
-<<style media="screen">
-  <div class="home">
-    <div class="profile">
-    	<a href="https://bill7845.github.io/about">
-    		<img src="https://user-images.githubusercontent.com/35517797/57661938-ff449e80-7627-11e9-8ef1-eeda6667f7f4.png">
-    	</a>
-    </div>
-    #home{ text-align: center; }
-</style>
 
+<div class="home">
+  <div class="profile">
+  	<a href="https://bill7845.github.io/about">
+  		<img src="https://user-images.githubusercontent.com/35517797/57661938-ff449e80-7627-11e9-8ef1-eeda6667f7f4.png" " width="50px;">
+  	</a>
+  </div>
 
   {% if site.theme_settings.header_text %}
   <div class="call-out"
