--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,6 +72,7 @@
 					<ul>
 							<li><a href="/Think/Note">Note</a></li>
 							<li><a href="/Think/Project1">서울시 공공빅데이터 공모전</a></li>
+							<li><a href="/Think/Project2">엔코아 데이터 모델링 특강 실습 프로젝트</a></li>
 					</ul>
 				</li>
 
