--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<style>
+  div.profile {text-align : center;}
+</style>
+
 <div class="home">
   <div class="profile">
   	<a href="https://bill7845.github.io/about">
