--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <style>
-  div.profile {text-align : center;}
+  div.profile {text-align : center; max-width:120px;}   
+}
 </style>
 
 <div class="home">
