--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <style>
-  div.profile {text-align : center; max-width:120px;}   
+  div.profile.{text-align : center; max-width:80px;}   
 }
 </style>
 
