--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,14 +3,14 @@ layout: default
 ---
 
 <style>
-  div.profile.{text-align : center; max-width:80px;}   
+  div.profile.{text-align : center; max-width:80px;}
 }
 </style>
 
 <div class="home">
   <div class="profile">
   	<a href="https://bill7845.github.io/about">
-  		<img src="../assets/img/Kiprofile.png" art="" title="profile image" >
+  		<img src="../assets/img/Kiprofile.png" art="" title="profile image"  border-radius:50px;>
   	</a>
   </div>
 
