--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,9 +54,16 @@
 						<li><a href="/DS/Statistics">Statistics</a></li>
 					</ul>
 				</li>
+
 				<li><a href="/">Data Base</a>
 					<ul>
 						<li><a href="/DB/ORACLE">ORACEL</a></li>
+					</ul>
+				</li>
+
+				<li><a href="/">Web</a>
+					<ul>
+						<li><a href="/Web/Jquery">Jquery</a></li>
 					</ul>
 				</li>
 
