--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,7 +63,7 @@
 
 				<li><a href="/">Web</a>
 					<ul>
-						<li><a href="/Web/Jquery">Jquery</a></li>
+						<li><a href="/Web_to/Jquery">Jquery</a></li>
 					</ul>
 				</li>
 
