--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,7 @@
 	<div class="site-category">
 			<ul class='cat1'>
 				<li><a href="/">Home</a></li>
+
 				<li><a href="/">Python</a>
 					<ul>
 							<li><a href="/Python/Python">Python</a></li>
@@ -63,7 +64,8 @@
 
 				<li><a href="/">Web</a>
 					<ul>
-						<li><a href="/Web_to/Jquery">Jquery</a></li>
+						<li><a href="/Web/Javascript">Javascript</a></li>
+						<li><a href="/Web/Jquery">Jquery</a></li>
 					</ul>
 				</li>
 
