--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,7 +64,7 @@
 
 				<li><a href="/">Web</a>
 					<ul>
-						<li><a href="/Web/Javascript">Javascript</a></li>
+						<li><a href="/Web/Jsp">Javascript</a></li>
 						<li><a href="/Web/Jquery">Jquery</a></li>
 					</ul>
 				</li>
