--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 <div class="home">
   <div class="profile">
   	<a href="https://bill7845.github.io/about">
-  		<img src="../assets/img/Kiprofile.png" art="" title="profile image" >
+  		<img src="../assets/img/Kiprofile.png"  title="profile image" >
   	</a>
   </div>
 
